# themeparks-rust

./: CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md
src/: errors.rs  lib.rs  themeparks.rs
src/themeparks/: destinations.rs  entity.rs
